# tivaware-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: BareMetalGNU.cmake  Tivaware.cmake  isr_vector.c.in  linker.ld.in  startup.c.in
source/: main.c
